# projectranger-backend

./: LICENSE  README.md  ROADMAP.MD  TODO.md  docker-compose.yml  env.example  pyproject.toml
src/: manage.py
src/apps/blueprints/: apps.py  models.py  serializers.py  urls.py  views.py
src/apps/blueprints/migrations/: 0001_initial.py
src/apps/languages/: apps.py  models.py  serializers.py  views.py
src/apps/languages/migrations/: 0001_initial.py
src/apps/projects/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/apps/projects/migrations/: 0001_initial.py  0002_project_user.py
src/apps/users/: models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_customuser_password.py
src/core/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
